Fix card and form element spacing

--- a/src/smif/app/static/css/main.css
+++ b/src/smif/app/static/css/main.css
@@ -1,7 +1,9 @@
 /**
  * Top-level and utility
  */
-
+body {
+    font-size: .875rem;
+}
 .table-projectoverview {
     width: 100%;
     margin: 20px auto;
@@ -15,18 +17,26 @@
 }
 .table-projectoverview .col-action {
     width: 10%;
+    text-align: right;
 }
-
+.table-projectoverview .col-action .btn {
+    margin: 0 0 0 0.5em;
+    padding: 0.2rem 0.5rem 0.4rem;
+}
 .jumbotron {
   padding: 20px;
-}
-body {
-    font-size: .875rem;
 }
 .feather {
     width: 16px;
     height: 16px;
     vertical-align: text-bottom;
+}
+.btn,
+select {
+    margin: 0 0.5em 0.5em 0;
+}
+.card {
+    margin-bottom: 1em;
 }
 
 /*
